fix: prevent normal reader activity bans
